# DiffPepBuilder

./: .gitignore  README.md  pyproject.toml  run.sh  run_diffpepbuilder.py  run_diffpepbuilder.sh
analysis/: metrics.py
config/: inference.yaml
datasets/docking/: PBD_data_subsampled.csv  PBD_screening_metrics.csv  docking_benchmark.csv
examples/: DiffPepBuilder_demo.ipynb  DiffPepDock_demo.ipynb
examples/receptor_data/: de_novo_cases.json
experiments/: preprocess_utils.py  run_docking.py  run_inference.py
test_case/: de_novo_cases.json  metadata_test.csv
