[project]
name = "diffpepbuilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Femke Aminetzah", email = "femkeaminetzah2003@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyrootutils>=0.12.0",
    "numpy>=1.26",
    "pandas>=2.3",
    "biopython>=1.85",
    "tqdm>=4.65",
    "ml-collections>=1.1",
    "pdbfixer>=1.12",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
    "jax==0.4.29",
    "jaxlib==0.4.29",
    "colabdesign>=1.1.1",
    "dm-haiku==0.0.9",
    "easydict",
    "mdtraj",
    "GPUtil",
    "tmtools",
    "py3Dmol",
    "hydra-core>=1.3",
    "hydra-joblib-launcher",
    "wget>=3.2",
    "fair-esm>=2.0.0",
    "wandb>=0.25.0",
]